--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -8,11 +8,9 @@ $color-scheme4: #767d84; // light grey
 //Typography
 
 #Fira Mono
-https://www.google.com/fonts/specimen/Fira+Mono
+@import url(https://www.google.com/fonts/specimen/Fira+Mono);
 
 #Fira Sans
-https://www.google.com/fonts/specimen/Fira+Sans
+@import url(https://www.google.com/fonts/specimen/Fira+Sans);
 
 #Proxima Nova Soft
-<script src="https://use.typekit.net/epm4awk.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
