sass some buttons

--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -4,14 +4,30 @@ $color-scheme1: #18ce76; // light green
 $color-scheme2: #2185c5; // sky blue
 $color-scheme3: #3e454c; // dark grey
 $color-scheme4: #767d84; // light grey
+$color-scheme5: #ffffff; // white - page background
+$color-scheme6: #F0F00E; // yellow - shit button
+$color-scheme7: #F00E0E; // red - fuck button
 
 //Typography
 
-#Fira Mono
+//Fira Mono
+$primary-mono: 'Fira', mono;
 @import url(https://www.google.com/fonts/specimen/Fira+Mono);
 
-#Fira Sans
+//Fira Sans
+$primary-sans-serif: 'Fira', sans-serif;
 @import url(https://www.google.com/fonts/specimen/Fira+Sans);
 
-#Proxima Nova Soft
+//Proxima Nova Soft
+$heading-san-serif: 'Proxima', sans-serif;
+@import url(https://use.typekit.net/epm4awk.js);
+
+//Heading
+$heading-bg: $color-scheme1;
+
+//Buttons
+$button-ok; // light green button
+$button-shit; // yellow button
+$button-fuck;// red button
+
 
