--- a/app/sass/_typography.scss
+++ b/app/sass/_typography.scss
@@ -1,2 +1,2 @@
-<script src="https://use.typekit.net/epm4awk.js"></script>
+//#Proxima Nova Soft
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
