--- a/app/sass/_typography.scss
+++ b/app/sass/_typography.scss
@@ -1,2 +1,3 @@
-//#Proxima Nova Soft
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
+@import url(https://www.google.com/fonts/specimen/Fira+Mono);
+@import url(https://www.google.com/fonts/specimen/Fira+Sans);
+@import url(https://use.typekit.net/epm4awk.js);
