add import fonts to application sass

--- a/app/sass/application.scss
+++ b/app/sass/application.scss
@@ -3,6 +3,7 @@
 //Import Partials: Files used across entire project
 @import 'reset';
 @import 'colors';
+@import 'fonts';
 @import 'mixins';
 @import 'state';
 @import 'typography';
