--- a/app/sass/application.scss
+++ b/app/sass/application.scss
@@ -10,6 +10,7 @@
 
 //Import Modules: Specific Objects
 @import 'buttons';
+@import 'icons';
 @import 'inputs';
 @import 'lists';
 
@@ -18,6 +19,7 @@
 
 //Import Base: Base layer
 @import 'base';
+
 
 
 
