changed one style variable name

--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -20,4 +20,4 @@ $primary-sans-serif: 'Fira', sans-serif;
 $heading-san-serif: 'Proxima', sans-serif;
 
 //Heading
-$heading-bg: $color-scheme1;
+$header: $color-scheme1;
