adjust button structure, remove require sass from entry.jsx

--- a/app/sass/_buttons.scss
+++ b/app/sass/_buttons.scss
@@ -1,8 +1,13 @@
-//Green okay button, yellow "shit" button ( to be changed to re-submit or something
-//more appropriate at some point, red "fuck" button, also to be changed at some point)
-//
-$button-ok: color-scheme1; // light green button
+@import 'buttons/index.scss';
 
-$button-shit: $color-scheme6; // yellow button
+.success-button {
+  @include lms-button;
+}
 
-$button-fuck: $color-scheme7; // red button
+.caution-button {
+  @include lms-button($caution-color);
+}
+
+.danger-button {
+  @include lms-button($danger-color);
+}
