--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -4,9 +4,10 @@ $color-scheme1: #18ce76; // light green
 $color-scheme2: #2185c5; // sky blue
 $color-scheme3: #3e454c; // dark grey
 $color-scheme4: #767d84; // light grey
-$color-scheme5: #ffffff; // white - page background
+$color-scheme5: #ffffff; // white
 $color-scheme6: #F0F00E; // yellow 
 $color-scheme7: #F00E0E; // red
+$color-scheme8: #393636; // darker grey
 
 //Additional Colors
 $success-color: $color-scheme1;
@@ -22,7 +23,7 @@ $primary-mono: 'Fira', mono;
 $primary-sans-serif: 'Fira', sans-serif;
 
 //Proxima Nova Soft
-$heading-san-serif: 'Proxima', sans-serif;
+$heading-sans-serif: 'Proxima', sans-serif;
 
 //Heading
 $header: $color-scheme1;
