--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -1,50 +1,72 @@
 body {
   width: 90%;
-  margin: 10px;
+  margin: 10px 10px 10px 10px;
   background-color: $color-scheme8;
   font-family: $primary-sans-serif;
 }
 main {
   display: flex;
   flex-direction: column;
-  flex-wrap:ltr;
+  flex-wrap: nowrap;
   background-color: $color-scheme5;
   text-align: left;
-  margin: 0 1.5%;
+  margin: 1.5%;
   width: 97%;
 }
-section { 
+nav {
   display: flex;
   flex-direction: column;
-  flex-wrap: ltr;
-  float: right;
-  margin: 0 1.5%;
-  width: 87%;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  position: fixed;
+  top: 10px;
+  left: 75px;
+  background-color: $color-scheme3;
+  float: left;
+  padding: 2px 2px 2px 2px;
+  width: 10%;
+  height: 97%;
+  text-align: center;
+  font-size: 2em;
+}
+
+.icon-home {
+  padding-left: 20px;
+}
+.icon-files-empty {
+  padding-left: 20px;
+}
+.icon-cog {
+  padding-left: 20px;
+}
+.icon-class {
+  padding: 2px 2px 2px 2px;
 }
 header {
   display: flex;
   flex-direction: row;
-  flex-wrap: ltr;
+  flex-wrap: nowrap;
   float: right;
   margin: 1.5%;
-  width: 97%;
+  width: 77%;
+  background-color: $color-scheme4;
 }
-aside {
+article { 
   display: flex;
   flex-direction: column;
-  flex-wrap: ltr;
-  background-color: $color-scheme3;
-  float: left;
+  flex-wrap: nowrap;
+  float: right;
   margin: 0 1.5%;
-  width: 17%;
-  font-size: 2em;
+  width: 77%;
 }
 h1 {
   width: 62%;
   background-color: $color-scheme1;
   font-family: $heading-sans-serif;
   font-size: 2em;
+  font-weight: 100;
   color: $color-scheme5;
+  padding: 5px 5px 5px 5px;
 }
 h2 {
   font-family: $heading-sans-serif;
@@ -56,9 +78,9 @@ h3 {
 }
 input {
   font-size: 100%;
-  background-color: $color-scheme2;
+  background-color: $color-scheme1;
   border: 1px solid $color-scheme3;
-  border-radius: 5px;
+  border-radius: 2px;
   background-repeat: no-repeat;
   background-position: 8px 9px;
   display: block;
