--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -4,7 +4,7 @@ $color-scheme1: #18ce76; // light green
 $color-scheme2: #2185c5; // sky blue
 $color-scheme3: #3e454c; // dark grey
 $color-scheme4: #767d84; // light grey
-$color-scheme5: #ffffff; // white
+$color-scheme5: #FFFFFF; // white
 $color-scheme6: #F0F00E; // yellow 
 $color-scheme7: #F00E0E; // red
 $color-scheme8: #393636; // darker grey
