--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -35,16 +35,16 @@ nav {
   font-size: 2em;
 }
 .cadet-logo {
-  align-items: flex-start
+  align-items: flex-start;
 }
 .icon-home {
-  padding-left: 10px;
+padding-left: 35%;
 }
 .icon-files-empty {
-  padding-left: 10px;
+  padding-left: 35%;
 }
 .icon-cog {
-  padding-left: 10px;
+  padding-left: 35%;
 }
 .assignment-header {
   padding: 20px 20px 20px 20px;
