--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -8,11 +8,14 @@ $color-scheme5: #FFFFFF; // white
 $color-scheme6: #F0F00E; // yellow 
 $color-scheme7: #F00E0E; // red
 $color-scheme8: #393636; // darker grey
+$color-scheme9: #A7AAAE; // lightest grey
 
 //Additional Colors
 $success-color: $color-scheme1;
 $caution-color: $color-scheme6;
 $danger-color: $color-scheme7;
+$shadow-color: $color-scheme9;
+
 
 //Typography
 
