--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -123,12 +123,13 @@ h3 {
 }
 input {
   font-size: 100%;
-  color: $color-scheme5;  
+  color: $color-scheme5;
   background-color: $color-scheme1;
+  border: none;
   border-radius: 10px;
   margin-left: 30px;
   margin-bottom: 10px;
-  padding: 1em 1em 1em;
+  padding: 15px 20px 15px 20px;
 }
 ul {
   padding: 10px 10px 10px 10px;
