--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -10,15 +10,16 @@ body {
   flex-direction: column;
   flex-wrap: nowrap;
   top: 0;
-  bottom: 0;
+  bottom: 20;
   position: fixed;
   overflow-y: scroll;
   overflow-x: hidden;
   background-color: $color-scheme5;
   text-align: left;
   margin: 1.5% 1.5% 1.5% 7.5%;
+  padding: 0 0 20px 0;
   width: 85%;
-  height: 100%;
+  height: 90%;
 }
 ::-webkit-scrollbar { 
   width: 12px; height: 2px;
@@ -87,9 +88,9 @@ header {
   flex-direction: row;
   flex-wrap: nowrap;
   margin: 0 0 0 7.5%;
-  width: 90.5%;
+  width: 95%;
   background-color: $color-scheme4;
-  padding: 5px 5px 5px 20px;
+  padding: 5px 5px 20px 20px;
 }
 article { 
   display: flex;
@@ -137,11 +138,11 @@ ul {
   margin-top: 30px;
 }
 li {
-  width: 87%;
+  width: 88%;
   background-color: $color-scheme4;
   list-style-type: none;
   font-weight: 700;
   padding: 10px 10px 10px 20px;
-  margin: 10px 10px 10px 10px;
+  margin: 10px 10px 10px 2px;
   box-shadow: 0 5px 1px $color-scheme9;
 }
