trying to figure out werid button/input issues and modularize, but styles not working when abstracted

--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -57,20 +57,28 @@ nav {
   float: left;
   padding: 2px 2px 2px 2px;
   width: 10%;
-  height: 100%;
+  height: 92.5%;
   text-align: center;
   font-size: 2em;
 }
 .cadet-logo {
+  position: absolute;
+  top: 25px;
   padding-left: 15%;
 }
 .icon-home {
+  position: absolute;
+  top: 30%;
   padding-left: 35%;
 }
 .icon-files-empty {
+  position: absolute;
+  top: 40%;
   padding-left: 35%;
 }
 .icon-cog {
+  position: absolute;
+  bottom: 5%;
   padding-left: 35%;
 }
 .assignment-header {
@@ -100,7 +108,7 @@ article {
   margin: 0 1.5%;
   width: 77%;
 }
-h1{
+h1 {
   width: 62%;
   background-color: $color-scheme4;
   font-family: $heading-sans-serif;
@@ -118,31 +126,27 @@ h2 {
   color: $color-scheme5;
   padding: 20px 20px 20px 20px;
 }
-h3 {
-  font-family: $heading-sans-serif;
-  font-size: 1em; 
-}
 input {
-  font-size: 100%;
+  width: 100px;
+  height: 50px;
   color: $color-scheme5;
   background-color: $color-scheme1;
   border: none;
   border-radius: 10px;
+  font-size: 100%;
+  display: block;
   margin-left: 30px;
   margin-bottom: 10px;
-  padding: 15px 20px 15px 20px;
-}
-ul {
-  padding: 10px 10px 10px 10px;
-  margin-left: 30px;
-  margin-top: 30px;
+  text-align: center;
 }
 li {
   width: 88%;
+  height: 160px;
   background-color: $color-scheme4;
   list-style-type: none;
-  font-weight: 700;
+  font-size: 24px;
+  font-weight: 300;
   padding: 10px 10px 10px 20px;
-  margin: 10px 10px 10px 2px;
+  margin: 10px 10px 2px 2px;
   box-shadow: 0 5px 1px $color-scheme9;
 }
