--- a/app/sass/_forms.scss
+++ b/app/sass/_forms.scss
@@ -1,6 +1,4 @@
-.form {
-  @include container-format($color-scheme1)
-  @include text-format($color-scheme5);
+form {
   color: $color-scheme5;
   padding: 30px, 10px, 30px, 20px;
   margin-left: 30px;
