--- a/app/sass/_icons.scss
+++ b/app/sass/_icons.scss
@@ -99,3 +99,26 @@
 .icon-git:before {
   content: "\eae2";
 }
+.icon-home {
+  position: absolute;
+  top: 30%;
+  padding-left: 35%;
+}
+.icon-files-empty {
+  position: absolute;
+  top: 40%;
+  padding-left: 35%;
+}
+.icon-cog {
+  position: absolute;
+  bottom: 5%;
+  padding-left: 35%;
+}
+.icon-minus {
+  text-align: last;
+  padding: 20px 20px 20px 20px;
+}
+.icon-plus {
+  text-align: last;
+  padding: 20px 20px 20px 20px;
+}
