--- a/app/sass/_mixins.scss
+++ b/app/sass/_mixins.scss
@@ -1,13 +1,9 @@
-@mixin text-format($text-color, $alignment: left, $size: 0.75em) {
-  text-align: $alignment;
-  font-size: $size;
-  color: $text-color;
+@mixin flex-format($display:flex, $flex-direction:column, $flex-wrap:nowrap) {
+  display: $display;
+  flex-direction: $flex-direction;
+  flex-wrap: $flex-wrap;
 }
 
-@mixin container-format($background-color: $color-scheme1, $width: 60%, $margin-left: 10px, $border-radius: 25px) {
-  background-color: $background-color;
-  width: $width;
-  margin-left: $margin-left;
-  border-radius: $border-radius;
-}
+// @mixin -format() {
+// }
 
