re-sass to Dexter's updated specs

--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -16,8 +16,7 @@ $caution-color: $color-scheme6;
 $danger-color: $color-scheme7;
 $shadow-color: $color-scheme9;
 
-
-//Typography
+//Font-Stack
 
 //Fira Mono
 $primary-mono: 'Fira', mono;
