--- a/app/sass/fonts/_font-stack.scss
+++ b/app/sass/fonts/_font-stack.scss
@@ -1,3 +1,10 @@
-@import url(https://www.google.com/fonts/specimen/Fira+Mono);
-@import url(https://www.google.com/fonts/specimen/Fira+Sans);
-@import url(https://use.typekit.net/epm4awk.js);
+//Font-Stack
+
+//Fira Mono
+$primary-mono: 'Fira', mono;
+
+//Fira Sans
+$primary-sans-serif: 'Fira', sans-serif;
+
+//Proxima Nova Soft
+$heading-sans-serif: 'Proxima', sans-serif;
