--- a/app/sass/buttons/_mixins.scss
+++ b/app/sass/buttons/_mixins.scss
@@ -1,21 +1,10 @@
-@mixin lms-button($width, $button-color: $success-color, $border-radius: 10px, $text-color: $color-scheme5, $font-size: 100%, $margin-left: 30px, $margin-bottom: 10px) {
+@mixin lms-button($width: 120px, $height: 45px, $button-color: $color-scheme1, $text-color: $color-scheme5, $border: none, $border-radius: 10px, $font-size: 80%, $margin-bottom: 20px) {
 width: $width;
-height:  $button-color;
-border-radius: $border-radius;
+height:  $height;
+button-color: $button-color;
 color: $text-color;
+border: $border;
+border-radius: $border-radius;
 font-size: $font-size;
-margin-left: $margin-left;
 margin-bottom: $margin-bottom;
-}
-
-button {
-  width: 120px;
-  height: 40px;
-  color: $color-scheme5;
-  background-color: $color-scheme1;
-  border: none;
-  border-radius: 10px;
-  font-size: 80%;
-  margin-bottom: 20px;
-  padding: 10px 10px 10px 10px;
 }
