--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -1,113 +1,155 @@
 body {
-  width: 90%;
-  background-color: $color-scheme8;
-  text-align: center;
   font-family: 'Fira Sans', sans-serif;
+  font-size: 16px;
 }
-.main {
-  @include flex-format;
-  top: 0;
-  bottom: 20px;
-  position: fixed;
-  overflow-y: scroll;
-  overflow-x: hidden;
+
+.wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+  min-height: 100%;
   background-color: $color-scheme5;
-  text-align: left;
-  margin: 1.5% 1.5% 1.5% 7.5%;
-  padding: 0 0 1.250em 0;
-  width: 85%;
-  height: 90%;
-}
-::-webkit-scrollbar { 
-  width: 12px; height: 2px;
-}
-::-webkit-scrollbar-button {
-  background-color: $color-scheme3; 
-}
-::-webkit-scrollbar-track {
-  background-color: $color-scheme3;
-}
-::-webkit-scrollbar-track-piece {
-  background-color: $color-scheme2;
-}
-::-webkit-scrollbar-thumb {
-  height: 25px; 
-  background-color: $color-scheme3; 
-  border-radius: 5px;
-}
-::-webkit-scrollbar-corner { 
-  background-color: $color-scheme3;
-}
-::-webkit-resizer { 
-  background-color: $color-scheme2;
-}
-nav {
-  @include flex-format;
-  align-items: flex-start;
-  justify-content: space-around;
-  position: fixed;
-  top: 20px;
-  left: 75px;
-  background-color: $color-scheme3;
-  float: left;
-  padding: 0.125em 0.125em 0.125em 0.125em;
-  min-width: 80px;
-  width: 7%;
-  height: 92%;
-  text-align: center;
-  font-size: 2em;
-}
-.cadet-logo {
-  position: absolute;
-  top: 15px;
-  padding-left: 15%;
-  max-width: 100%;
-  max-height: 100%;
-}
-.assignment-header {
-  padding: 10px 20px 10px 20px;
-  margin-left: 0;
-}
-header {
-  @include flex-format($flex-direction:row);
-  margin: 0 7.5% 0 0;
   width: 100%;
+  position: relative;
+}
+
+nav {
+  flex: 0 1 7%;
+  width: 7%;
+  min-height: 100%;
+  position: fixed;
+  background-color: $color-scheme3;
+
+  ul {
+    display: flex;
+    flex-flow: column wrap;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    display: block;
+    flex-grow: 1;
+    list-style-type: none;
+    text-align: center;
+
+    &:first-child,
+    &:last-child {
+      flex-grow: 0;
+    }
+
+    &:first-child a {
+      height: 80px;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  .cadet-logo {
+    max-height: 100%;
+    max-width: auto;
+    height: 50px;
+    width: auto;
+  }
+
+  a {
+    display: block;
+    padding: 40px 0;
+    font-size: 1.75em;
+    background-color: $color-scheme3;
+
+    &:hover {
+      background-color: darken($color-scheme3, 5%);
+      text-decoration: none;
+    }
+  }
+}
+
+main {
+  flex: 0 1 93%;
+  min-height: 100%;
+  display: flex;
+  flex-flow: column wrap;
+  padding-left: 7%;
+}
+
+header {
+  flex: 0 1 100%;
+  display: flex;
+  flex-flow: row nowrap;
   background-color: $color-scheme4;
+  height: 80px;
+
+  h1 {
+    flex: 0 1 90%;
+    padding-left: 1em;
+    margin: 0;
+    line-height: 80px;
+  }
+
+  .login {
+    flex: 0 1 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    a {
+      color: $color-scheme5;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
 }
-article { 
-  @include flex-format;
-  float: right;
-  width: 90%;
+
+.assignments {
+  padding: 0 2em;
+
+  article {
+    box-shadow: 1px 5px 2px $color-scheme9;
+    margin: 40px 0;
+  }
+
+  .assignment-header {
+    background-color: $color-scheme1;
+    color: $color-scheme5;
+    padding: 10px 0 10px 1em;
+    margin: 0;
+  }
+
+  ul {
+    margin: 0;
+    padding: 2em;
+  }
+
+  li {
+    list-style-type: none;
+    font-size: 1.5em;
+  }
 }
-h1 {
-  width: 95%;
-  background-color: $color-scheme4;
-  font-family: 'Fira Mono', ;
-  font-size: 2em;
-  font-weight: 100;
-  color: $color-scheme5;
-  margin-left: 100px;
-}
-h2 {
-  width: 93%;
-  z-index: 5;
-  background-color: $color-scheme1;
-  font-family: 'Fira Mono', ;
-  font-size: 1.5em;
-  font-weight: 100;
-  color: $color-scheme5;
-  border-bottom: 0;
-  margin-bottom: -20px;
-  box-shadow: 1px 4px 2px $color-scheme9;
-}
-button {
-  width: 120px;
-  height: 40px;
-  color: $color-scheme5;
-  background-color: $color-scheme1;
-  border: none;
-  border-radius: 10px;
-  font-size: 80%;
-  margin-bottom: 20px;
-  padding: 10px 10px 10px 10px;
-}
+
+// ::-webkit-scrollbar {
+//   width: 12px; height: 2px;
+// }
+// ::-webkit-scrollbar-button {
+//   background-color: $color-scheme3;
+// }
+// ::-webkit-scrollbar-track {
+//   background-color: $color-scheme3;
+// }
+// ::-webkit-scrollbar-track-piece {
+//   background-color: $color-scheme2;
+// }
+// ::-webkit-scrollbar-thumb {
+//   height: 25px;
+//   background-color: $color-scheme3;
+//   border-radius: 5px;
+// }
+// ::-webkit-scrollbar-corner {
+//   background-color: $color-scheme3;
+// }
+// ::-webkit-resizer {
+//   background-color: $color-scheme2;
