--- a/app/sass/buttons/_mixins.scss
+++ b/app/sass/buttons/_mixins.scss
@@ -1,10 +1,24 @@
-@mixin lms-button($width: 120px, $height: 45px, $button-color: $color-scheme1, $text-color: $color-scheme5, $border: none, $border-radius: 10px, $font-size: 80%, $margin-bottom: 20px) {
-width: $width;
-height:  $height;
-button-color: $button-color;
-color: $text-color;
-border: $border;
-border-radius: $border-radius;
-font-size: $font-size;
-margin-bottom: $margin-bottom;
+@mixin button-size($size) {
+  @if $size == "small" {
+    padding: .4em .6em;
+    font-size: .75em;
+  }
+  @else if $size == "large" {
+    padding: .6em 2.5em;
+    font-size: 1.2em;
+  }
+  @else {
+    padding: .4em .8em;
+  }
+}
+
+@mixin lms-button($background-color: $color-scheme1, $text-color: $color-scheme5, $size: 'default') {
+  @include button-size($size);
+  background-color: $background-color;
+  color: $text-color;
+
+  &:hover,
+  &:active {
+    background-color: lighten($background-color, 5%);
+  }
 }
