--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -5,7 +5,7 @@ $color-scheme2: #2185c5; // sky blue
 $color-scheme3: #3e454c; // dark grey
 $color-scheme4: #767d84; // light grey
 $color-scheme5: #FFFFFF; // white
-$color-scheme6: #F0F00E; // yellow
+$color-scheme6: #FFCF48; // yellow
 $color-scheme7: #F00E0E; // red
 $color-scheme8: #393636; // darker grey
 $color-scheme9: #A7AAAE; // lightest grey
