minor fix to form style

--- a/app/sass/modules/create-course/index.scss
+++ b/app/sass/modules/create-course/index.scss
@@ -9,7 +9,7 @@
     color: $color-scheme5;
   }
 
-  form {
+  .course-form {
     margin: 0 auto;
     padding: 2em;
     box-shadow: 1px 5px 2px $color-scheme9;
